--- a/prometheus-exporters/openstack-exporter/templates/openstack-exporter-openstack-config.yaml
+++ b/prometheus-exporters/openstack-exporter/templates/openstack-exporter-openstack-config.yaml
@@ -10,7 +10,7 @@ data:
     openstack:
       auth_url: https://{{include "keystone_api_endpoint_host_public" .}}/v3
       username: {{ required ".Values.openstack.username missing" .Values.openstack.username }}
-      password: {{ derivePassword 1 "long" .Values.global.master_password "openstack_exporter" (include "keystone_api_endpoint_host_public" .) | quote }}
+      password: {{ derivePassword 1 "long" .Values.global.exporter_master_password "openstack_exporter" (include "keystone_api_endpoint_host_public" .) | quote }}
       user_domain_name: {{ required ".Values.openstack.user_domain_name missing" .Values.openstack.user_domain_name }}
       project_domain_name: {{ required ".Values.openstack.project_domain_name missing" .Values.openstack.project_domain_name }}
       project_name: {{ required ".Values.openstack.project_name missing" .Values.openstack.project_name }}
