--- a/prometheus-exporters/openstack-exporter/templates/openstack-exporter-seed.yaml
+++ b/prometheus-exporters/openstack-exporter/templates/openstack-exporter-seed.yaml
@@ -12,7 +12,7 @@ spec:
     users:
     - name: openstack_exporter{{ .Values.global.user_suffix | default "" }}
       description: OpenStack exporter user
-      password: {{ derivePassword 1 "long" .Values.global.master_password "openstack_exporter" (include "keystone_api_endpoint_host_public" .) | quote }}
+      password: {{ derivePassword 1 "long" .Values.global.exporter_master_password "openstack_exporter" (include "keystone_api_endpoint_host_public" .) | quote }}
 
   - name: ccadmin
     projects:
